almost done with nn tutorial

--- a/nn_tutorial/transfer_learning.ipynb
+++ b/nn_tutorial/transfer_learning.ipynb
@@ -52,7 +52,8 @@
     "my_new_model.add(Dense(num_classes, activation='softmax'))\n",
     "\n",
     "# Say not to train first layer (ResNet) model. It is already trained\n",
-    "my_new_model.layers[0].trainable = False"
+    "my_new_model.layers[0].trainable = False\n",
+    "my_new_model.compile(optimizer='sgd', loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
@@ -70,9 +71,7 @@
      ]
     }
    ],
-   "source": [
-    "my_new_model.compile(optimizer='sgd', loss='categorical_crossentropy', metrics=['accuracy'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
