done with level 1 of kagle nn tutorial

--- a/nn_tutorial/deep_learning.ipynb
+++ b/nn_tutorial/deep_learning.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,8 +151,19 @@
       "48000/48000 [==============================]48000/48000 [==============================] - 68s 1ms/step - loss: 0.2666 - acc: 0.9020 - val_loss: 0.2714 - val_acc: 0.9041\n",
       "\n",
       "Epoch 4/4\n",
-      "43900/48000 [==========================>...]43900/48000 [==========================>...] - ETA: 5s - loss: 0.2266 - acc: 0.9168"
+      "48000/48000 [==============================]48000/48000 [==============================] - 71s 1ms/step - loss: 0.2278 - acc: 0.9163 - val_loss: 0.2648 - val_acc: 0.9051\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras._impl.keras.callbacks.History at 0x1a4fb3a128>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
