tiny progress on titanic

--- a/titanic/4_logistic_regression.ipynb
+++ b/titanic/4_logistic_regression.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Much of this was inspired by Andrew Conti\n",
+    "\n",
+    "http://nbviewer.jupyter.org/github/agconti/kaggle-titanic/blob/master/Titanic.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Turns out I don't like his tutorial too much.  I don't like copying anyways so I'm going to try it out myself"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +30,199 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import Imputer\n",
     "\n",
-    "data = pd.read_csv('../data/titanic/train.csv')"
+    "df = pd.read_csv('../data/titanic/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = df.drop(['Ticket','Cabin'], axis=1)\n",
+    "# Remove NaN values\n",
+    "df = df.dropna() # FIXME: instead use an imputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# model formula\n",
+    "# here the ~ sign is an = sign, and the features of our dataset\n",
+    "# are written as a formula to predict survived. The C() lets our \n",
+    "# regression know that those variables are categorical.\n",
+    "# Ref: http://patsy.readthedocs.org/en/latest/formulas.html\n",
+    "formula = 'Survived ~ C(Pclass) + C(Sex) + Age + SibSp  + C(Embarked)' \n",
+    "# create a results dictionary to hold our regression results for easy analysis later        \n",
+    "results = {} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.444388\n",
+      "         Iterations 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Logit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>     <td>Survived</td>     <th>  No. Observations:  </th>  <td>   712</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>               <td>Logit</td>      <th>  Df Residuals:      </th>  <td>   704</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     7</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>          <td>Sun, 18 Mar 2018</td> <th>  Pseudo R-squ.:     </th>  <td>0.3414</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>              <td>20:36:49</td>     <th>  Log-Likelihood:    </th> <td> -316.40</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -480.45</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th> </th>                      <td> </td>        <th>  LLR p-value:       </th> <td>5.992e-67</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "          <td></td>            <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>        <td>    4.5423</td> <td>    0.474</td> <td>    9.583</td> <td> 0.000</td> <td>    3.613</td> <td>    5.471</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.2]</th>   <td>   -1.2673</td> <td>    0.299</td> <td>   -4.245</td> <td> 0.000</td> <td>   -1.852</td> <td>   -0.682</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Pclass)[T.3]</th>   <td>   -2.4966</td> <td>    0.296</td> <td>   -8.422</td> <td> 0.000</td> <td>   -3.078</td> <td>   -1.916</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Sex)[T.male]</th>   <td>   -2.6239</td> <td>    0.218</td> <td>  -12.060</td> <td> 0.000</td> <td>   -3.050</td> <td>   -2.197</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Embarked)[T.Q]</th> <td>   -0.8351</td> <td>    0.597</td> <td>   -1.398</td> <td> 0.162</td> <td>   -2.006</td> <td>    0.335</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>C(Embarked)[T.S]</th> <td>   -0.4254</td> <td>    0.271</td> <td>   -1.572</td> <td> 0.116</td> <td>   -0.956</td> <td>    0.105</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Age</th>              <td>   -0.0436</td> <td>    0.008</td> <td>   -5.264</td> <td> 0.000</td> <td>   -0.060</td> <td>   -0.027</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>SibSp</th>            <td>   -0.3697</td> <td>    0.123</td> <td>   -3.004</td> <td> 0.003</td> <td>   -0.611</td> <td>   -0.129</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                           Logit Regression Results                           \n",
+       "==============================================================================\n",
+       "Dep. Variable:               Survived   No. Observations:                  712\n",
+       "Model:                          Logit   Df Residuals:                      704\n",
+       "Method:                           MLE   Df Model:                            7\n",
+       "Date:                Sun, 18 Mar 2018   Pseudo R-squ.:                  0.3414\n",
+       "Time:                        20:36:49   Log-Likelihood:                -316.40\n",
+       "converged:                       True   LL-Null:                       -480.45\n",
+       "                                        LLR p-value:                 5.992e-67\n",
+       "====================================================================================\n",
+       "                       coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------\n",
+       "Intercept            4.5423      0.474      9.583      0.000       3.613       5.471\n",
+       "C(Pclass)[T.2]      -1.2673      0.299     -4.245      0.000      -1.852      -0.682\n",
+       "C(Pclass)[T.3]      -2.4966      0.296     -8.422      0.000      -3.078      -1.916\n",
+       "C(Sex)[T.male]      -2.6239      0.218    -12.060      0.000      -3.050      -2.197\n",
+       "C(Embarked)[T.Q]    -0.8351      0.597     -1.398      0.162      -2.006       0.335\n",
+       "C(Embarked)[T.S]    -0.4254      0.271     -1.572      0.116      -0.956       0.105\n",
+       "Age                 -0.0436      0.008     -5.264      0.000      -0.060      -0.027\n",
+       "SibSp               -0.3697      0.123     -3.004      0.003      -0.611      -0.129\n",
+       "====================================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from patsy import dmatrices\n",
+    "import statsmodels.api as sm\n",
+    "# create a regression friendly dataframe using patsy's dmatrices function\n",
+    "y,x = dmatrices(formula, data=df, return_type='dataframe')\n",
+    "\n",
+    "# instantiate our model\n",
+    "model = sm.Logit(y,x)\n",
+    "\n",
+    "# fit our model to the training data\n",
+    "res = model.fit()\n",
+    "\n",
+    "# save the result for outputing predictions later\n",
+    "results['Logit'] = [res, formula]\n",
+    "res.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_csv(\"../data/titanic/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (712,8) and (418,11) not aligned: 8 (dim 1) != 418 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-533674834033>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/statsmodels/discrete/discrete_model.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, params, exog, linear)\u001b[0m\n\u001b[1;32m    429\u001b[0m             \u001b[0mexog\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexog\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    430\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mlinear\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 431\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexog\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    432\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    433\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexog\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (712,8) and (418,11) not aligned: 8 (dim 1) != 418 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "model.predict(test_data)"
    ]
   },
   {
@@ -25,61 +233,9 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../data/titanic/train.csv')\n",
-    "y = data.Survived\n",
-    "X = data.drop(['Survived', 'Name', 'PassengerId', 'Ticket', \"Cabin\"], axis=1)\n",
-    "X = pd.get_dummies(X)\n",
-    "train_x, test_x, train_y, test_y = train_test_split(X.as_matrix(), y.as_matrix(), test_size=0.25)\n",
-    "\n",
-    "imputer = Imputer()\n",
-    "train_x = imputer.fit_transform(train_x)\n",
-    "test_x = imputer.transform(test_x)"
+    "# output and submit to kaggle\n",
+    "compared_resuts.to_csv(\"../submissions/titanic/4_logistic.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
