submitted yassines code and started two new tutorials

--- a/talking_data/4_remove_col_more_data.ipynb
+++ b/talking_data/4_remove_col_more_data.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -109,18 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "predictions.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -132,6 +121,26 @@
     "    })\n",
     "\n",
     "submission.to_csv('/Users/pbezuhov/git/Kaggle/submissions/4_remove_col_more_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18790469,)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.shape"
    ]
   },
   {
