--- a/complete/house_prices/13_fine_tuning.ipynb
+++ b/complete/house_prices/13_fine_tuning.ipynb
@@ -45,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv('../data/house_prices/train.csv') # Get training data\n",
@@ -181,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for col in ('MSSubClass', 'OverallCond', 'YrSold', 'MoSold'):\n",
@@ -220,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.special import boxcox1p\n",
