huge progress on ghouls competition

--- a/complete/ghouls/analysis.ipynb
+++ b/complete/ghouls/analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imports"
+    "# Imports"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data"
+    "# Data"
    ]
   },
   {
@@ -263,6 +263,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Exploration\n",
+    "\n",
+    "### Correlation map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -291,6 +300,15 @@
    "source": [
     "f = train.corr()\n",
     "sns.heatmap(f, annot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variable distribution\n",
+    "\n",
+    "It looks like they're all gaussian without much skew"
    ]
   },
   {
