--- a/complete/flowers/submission.ipynb
+++ b/complete/flowers/submission.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
     "train_generator = data_generator_with_aug.flow_from_directory(\n",
     "        '../../data/flowers/train/',\n",
     "        target_size = (image_w, image_h),\n",
-    "        batch_size = 20,\n",
+    "        batch_size = 8,\n",
     "        class_mode='categorical')\n",
     "\n",
     "validation_generator = data_generator_with_aug.flow_from_directory(\n",
@@ -120,15 +120,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "  9/163 [>.............................] - ETA: 2:07:54 - loss: 2.4253 - acc: 0.3278"
+      "Epoch 1/1\n"
      ]
     }
    ],
    "source": [
     "history = model.fit_generator(\n",
     "        train_generator,\n",
-    "        epochs = 5,\n",
+    "        epochs = 1,\n",
     "        validation_data=validation_generator)"
    ]
   },
@@ -147,18 +146,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
