tried large batch size

--- a/in_progress/mnist/5_noisy_data.ipynb
+++ b/in_progress/mnist/5_noisy_data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score: 99.142%\n",
+    "# Score: \n",
+    "\n",
+    "Same as before except I add more data by adding a bit of noise to dark data points\n",
     "\n",
     "### Imports"
    ]
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -132,14 +134,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "### Generating more images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -164,12 +168,12 @@
    "source": [
     "# Fitting the model to the data\n",
     "\n",
-    "### Low batch size"
+    "### High batch size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,25 +181,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1120/1120 [==============================] - 183s 163ms/step - loss: 0.1877 - acc: 0.9471 - val_loss: 0.0531 - val_acc: 0.9861\n",
+      "280/280 [==============================] - 192s 685ms/step - loss: 0.8627 - acc: 0.7124 - val_loss: 0.1630 - val_acc: 0.9506\n",
       "Epoch 2/10\n",
-      "1120/1120 [==============================] - 208s 186ms/step - loss: 0.1367 - acc: 0.9624 - val_loss: 0.0488 - val_acc: 0.9870\n",
+      "280/280 [==============================] - 195s 696ms/step - loss: 0.2502 - acc: 0.9276 - val_loss: 0.0714 - val_acc: 0.9782\n",
       "Epoch 3/10\n",
-      "1120/1120 [==============================] - 234s 209ms/step - loss: 0.1201 - acc: 0.9680 - val_loss: 0.0441 - val_acc: 0.9888\n",
+      "280/280 [==============================] - 242s 864ms/step - loss: 0.1707 - acc: 0.9521 - val_loss: 0.0673 - val_acc: 0.9801\n",
       "Epoch 4/10\n",
-      "1120/1120 [==============================] - 188s 168ms/step - loss: 0.1100 - acc: 0.9709 - val_loss: 0.0449 - val_acc: 0.9887\n",
+      "280/280 [==============================] - 239s 853ms/step - loss: 0.1372 - acc: 0.9600 - val_loss: 0.0453 - val_acc: 0.9856\n",
       "Epoch 5/10\n",
-      "1120/1120 [==============================] - 201s 180ms/step - loss: 0.0938 - acc: 0.9749 - val_loss: 0.0389 - val_acc: 0.9898\n",
+      "280/280 [==============================] - 181s 646ms/step - loss: 0.1173 - acc: 0.9668 - val_loss: 0.0436 - val_acc: 0.9881\n",
       "Epoch 6/10\n",
-      "1120/1120 [==============================] - 190s 170ms/step - loss: 0.0923 - acc: 0.9755 - val_loss: 0.0363 - val_acc: 0.9917\n",
+      "280/280 [==============================] - 201s 718ms/step - loss: 0.1018 - acc: 0.9714 - val_loss: 0.0390 - val_acc: 0.9893\n",
       "Epoch 7/10\n",
-      "1120/1120 [==============================] - 202s 180ms/step - loss: 0.0845 - acc: 0.9776 - val_loss: 0.0309 - val_acc: 0.9926\n",
+      "280/280 [==============================] - 190s 679ms/step - loss: 0.0901 - acc: 0.9748 - val_loss: 0.0367 - val_acc: 0.9899\n",
       "Epoch 8/10\n",
-      "1120/1120 [==============================] - 186s 166ms/step - loss: 0.0791 - acc: 0.9797 - val_loss: 0.0304 - val_acc: 0.9917\n",
+      "280/280 [==============================] - 191s 681ms/step - loss: 0.0855 - acc: 0.9766 - val_loss: 0.0377 - val_acc: 0.9886\n",
       "Epoch 9/10\n",
-      "1120/1120 [==============================] - 201s 180ms/step - loss: 0.0779 - acc: 0.9794 - val_loss: 0.0365 - val_acc: 0.9907\n",
+      "280/280 [==============================] - 189s 676ms/step - loss: 0.0853 - acc: 0.9776 - val_loss: 0.0340 - val_acc: 0.9908\n",
       "Epoch 10/10\n",
-      "1120/1120 [==============================] - 201s 179ms/step - loss: 0.0712 - acc: 0.9806 - val_loss: 0.0289 - val_acc: 0.9921\n"
+      "280/280 [==============================] - 191s 683ms/step - loss: 0.0737 - acc: 0.9793 - val_loss: 0.0359 - val_acc: 0.9899\n"
      ]
     }
    ],
@@ -216,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -239,11 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "submission.to_csv(\"/Users/pbezuhov/git/Kaggle/submissions/3_small_batch_size.csv\", index=False)"
+    "submission.to_csv(\"/Users/pbezuhov/git/Kaggle/submissions/4_large_batch_size.csv\", index=False)"
    ]
   },
   {
