--- a/in_progress/mnist/1_sample_run.ipynb
+++ b/in_progress/mnist/1_sample_run.ipynb
@@ -320,7 +320,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# predict results\n",
