taking up talking data again

--- a/complete/ghouls/submission.ipynb
+++ b/complete/ghouls/submission.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,16 +39,18 @@
      "output_type": "stream",
      "text": [
       "Shape of train: (371, 7)\n",
-      "Shape of test: (529, 6)\n"
+      "Shape of test: (529, 6) \n"
      ]
     }
    ],
    "source": [
-    "train = pd.read_csv(\"/Users/pbezuhov/git/Kaggle/data/ghouls/train.csv\")\n",
-    "test = pd.read_csv(\"/Users/pbezuhov/git/Kaggle/data/ghouls/test.csv\")\n",
+    "path = \"/Users/pbezuhov/git/Kaggle/data/ghouls/\"\n",
+    "\n",
+    "train = pd.read_csv(path + \"train.csv\")\n",
+    "test  = pd.read_csv(path + \"test.csv\")\n",
     "\n",
     "print(\"Shape of train: {}\".format(train.shape))\n",
-    "print(\"Shape of test: {}\".format(test.shape))\n",
+    "print(\"Shape of test: {} \".format(test.shape))\n",
     "\n",
     "train_id = train.id\n",
     "test_id = test.id\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -111,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.64516129 0.59677419 0.6097561 ]\n",
+      "[ 0.64516129  0.59677419  0.6097561 ]\n",
       "\n",
       "Average is ...\n",
-      "0.6172305271439811\n"
+      "0.617230527144\n"
      ]
     }
    ],
@@ -141,17 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.7016129  0.73387097 0.62601626]\n",
+      "[ 0.7016129   0.73387097  0.62601626]\n",
       "\n",
       "Average is ...\n",
-      "0.6871667103767812\n"
+      "0.687166710377\n"
      ]
     }
    ],
@@ -171,17 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.66935484 0.72580645 0.64227642]\n",
+      "[ 0.66935484  0.72580645  0.64227642]\n",
       "\n",
       "Average is ...\n",
-      "0.6791459043622693\n"
+      "0.679145904362\n"
      ]
     }
    ],
@@ -199,13 +201,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('imputer', Imputer(axis=0, copy=True, missing_values='NaN', strategy='mean', verbose=0)), ('xgbclassifier', XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+       "       max_depth=3, min_child_weight=1, mi...\n",
+       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "       silent=True, subsample=1))])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pipeline.fit(train, train_type)"
+    "xgb_model.fit(train, train_type)"
    ]
   },
   {
@@ -217,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "prediction = pipeline.predict(test)\n",
+    "prediction = xgb_model.predict(test)\n",
     "\n",
     "ghoul_map = {0: \"Ghoul\", 1: \"Goblin\", 2: \"Ghost\"}\n",
     "mapper = lambda t: ghoul_map[t]\n",
@@ -241,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -252,7 +268,7 @@
     "    'type': prediction\n",
     "})\n",
     "\n",
-    "submission.to_csv('/Users/pbezuhov/git/Kaggle/submissions/2_ghouls_svc.csv',index=False)"
+    "submission.to_csv('/Users/pbezuhov/git/Kaggle/submissions/ghouls.csv',index=False)"
    ]
   },
   {
