removed captions from readme

--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv('/Users/pbezuhov/git/Kaggle/data/titanic/train.csv')\n",
@@ -60,6 +62,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -178,20 +181,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cross validation score"
+    "### "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "k_fold = KFold(shuffle=True, random_state=0)"
+    "train = dataset[:train_len]\n",
+    "test = dataset[train_len:]\n",
+    "test.drop(labels=[\"Survived\"],axis = 1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cross validation score"
    ]
   },
   {
@@ -212,8 +222,13 @@
     }
    ],
    "source": [
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "k_fold = KFold(shuffle=True, random_state=1)\n",
     "\n",
     "pipeline = make_pipeline(Imputer(), SVC())\n",
     "\n",
