--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pulling the title information out of people's name (like mr, mrs, dr, etc)"
+    "### Creating a Title Column"
    ]
   },
   {
@@ -67,6 +67,7 @@
    },
    "outputs": [],
    "source": [
+    "# Pulling the title information out of people's name (like mr, mrs, dr, etc)\n",
     "full['Title'] = full['Name'].str.extract(' ([A-Za-z]+)\\.', expand=False)\n",
     "\n",
     "title_mapping = {\"Mr\": 0, \"Miss\": 1, \"Mrs\": 1, \"Mlle\": 1, \"Mme\": 1, \"Ms\": 3,\n",
@@ -83,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Make the categorical sex column into a numerical one"
+    "### Make categorical columns numeric"
    ]
   },
   {
@@ -95,15 +96,20 @@
    "outputs": [],
    "source": [
     "sex_mapping = {\"male\": 0, \"female\": 1}\n",
+    "full['Sex'] = full['Sex'].map(sex_mapping)\n",
     "\n",
-    "full['Sex'] = full['Sex'].map(sex_mapping)"
+    "cabin_mapping = {\"None\": 0, \"C\": 1, \"B\": 2, \"D\": 3, \"E\": 4, \"A\": 5, \"F\": 5, \"G\": 5, \"T\": 5}\n",
+    "full['Cabin'] = full['Cabin'].map(cabin_mapping)\n",
+    "\n",
+    "embarked_mapping = {\"S\": 0, \"C\": 1, \"Q\": 2}\n",
+    "full['Embarked'] = full['Embarked'].map(embarked_mapping)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fill NaN values"
+    "### Fill NaN values"
    ]
   },
   {
@@ -130,58 +136,239 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cabin data"
+    "### Ticket Column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>T_SOTONO2</th>\n",
+       "      <th>T_SOTONOQ</th>\n",
+       "      <th>T_SP</th>\n",
+       "      <th>T_STONO</th>\n",
+       "      <th>T_STONO2</th>\n",
+       "      <th>T_STONOQ</th>\n",
+       "      <th>T_SWPP</th>\n",
+       "      <th>T_WC</th>\n",
+       "      <th>T_WEP</th>\n",
+       "      <th>T_X</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 48 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age Cabin Embarked     Fare  \\\n",
+       "0  22.0   NaN        S   7.2500   \n",
+       "1  38.0   C85        C  71.2833   \n",
+       "2  26.0   NaN        S   7.9250   \n",
+       "3  35.0  C123        S  53.1000   \n",
+       "4  35.0   NaN        S   8.0500   \n",
+       "\n",
+       "                                                Name  Parch  PassengerId  \\\n",
+       "0                            Braund, Mr. Owen Harris      0            1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...      0            2   \n",
+       "2                             Heikkinen, Miss. Laina      0            3   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)      0            4   \n",
+       "4                           Allen, Mr. William Henry      0            5   \n",
+       "\n",
+       "   Pclass     Sex  SibSp ...   T_SOTONO2  T_SOTONOQ  T_SP  T_STONO  T_STONO2  \\\n",
+       "0       3    male      1 ...           0          0     0        0         0   \n",
+       "1       1  female      1 ...           0          0     0        0         0   \n",
+       "2       3  female      0 ...           0          0     0        0         1   \n",
+       "3       1  female      1 ...           0          0     0        0         0   \n",
+       "4       3    male      0 ...           0          0     0        0         0   \n",
+       "\n",
+       "   T_STONOQ  T_SWPP  T_WC  T_WEP  T_X  \n",
+       "0         0       0     0      0    0  \n",
+       "1         0       0     0      0    0  \n",
+       "2         0       0     0      0    0  \n",
+       "3         0       0     0      0    1  \n",
+       "4         0       0     0      0    1  \n",
+       "\n",
+       "[5 rows x 48 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cabin_mapping = {\"None\": 0, \"C\": 1, \"B\": 2, \"D\": 3, \"E\": 4, \"A\": 5, \"F\": 5, \"G\": 5, \"T\": 5}\n",
+    "## Treat Ticket by extracting the ticket prefix. When there is no prefix it returns X. \n",
+    "def ticket_prefix(x):\n",
+    "    if not x.isdigit() :\n",
+    "        return x.replace(\".\",\"\").replace(\"/\",\"\").strip().split(' ')[0] #Take prefix\n",
+    "    else:\n",
+    "        return \"X\"\n",
     "\n",
-    "full['Cabin'] = full['Cabin'].map(cabin_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "embarked_mapping = {\"S\": 0, \"C\": 1, \"Q\": 2}\n",
-    "for dataset in full_data:\n",
-    "    dataset['Embarked'] = dataset['Embarked'].map(embarked_mapping)"
+    "full[\"Ticket\"] = full.Ticket.map(ticket_prefix)\n",
+    "full = pd.get_dummies(full, columns = [\"Ticket\"], prefix=\"T\")\n",
+    "full.head(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The ticket column seems to have no information so I drop it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "full = full.drop(['Ticket'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### "
+    "### Split the data back into train and test data"
    ]
   },
   {
@@ -192,16 +379,40 @@
    },
    "outputs": [],
    "source": [
-    "train = dataset[:train_len]\n",
-    "test = dataset[train_len:]\n",
-    "test.drop(labels=[\"Survived\"],axis = 1,inplace=True)"
+    "train = full[:train_N]\n",
+    "test = full[train_N:]\n",
+    "test.drop(labels=[\"Survived\"], axis=1, inplace=True)\n",
+    "\n",
+    "del full, train_N"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cross validation score"
+    "### Split the training data into target and predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train[\"Survived\"] = train[\"Survived\"].astype(int)\n",
+    "train_y = train[\"Survived\"]\n",
+    "train_x = train.drop(labels=[\"Survived\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modeling\n",
+    "\n",
+    "### Cross validation score"
    ]
   },
   {
